--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>Light On/Off website</title>
   </head>
-  <body></body>
+  <body>
+    <div class="background"></div>
+  </body>
 </html>
