--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Light On/Off website</title>
   </head>
   <body>
-    <div class="background"></div>
+    <div class="background">
+      <nav class="nav">
+        <a href="/"><img class="nav__logo" src="/images/logo.png" alt="" /></a>
+        <div class="collapsible">
+          <a
+            ><img class="icon icon--white nav__icon" src="/images/menu.png"
+          /></a>
+          <ul class="list nav__list collapsible__content">
+            <li class="nav__item"><a href="#">Latest</a></li>
+            <li class="nav__item"><a href="#">Modern</a></li>
+            <li class="nav__item"><a href="#">Contemporary</a></li>
+            <li class="nav__item">
+              <a href="#">Affordable</a>
+            </li>
+            <button type="button" class="list_button"><span></span></button>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </body>
+  <script src="js/main.js"></script>
 </html>
