add lamp component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           </ul>
         </div>
       </nav>
+      <div class="lamp-container">
+        <img class="lamp" src="/images/lamp.png" alt="" />
+        <img class="lamp_light" src="/images/light.png" alt="" />
+      </div>
     </div>
   </body>
   <script src="js/main.js"></script>
