--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         <img class="lamp" src="/images/lamp.png" alt="" />
         <img class="lamp_light" src="/images/light.png" alt="" />
       </div>
+
+      <div class="Text-container">
+        <h1>
+          Latest<br />
+          in Lighting
+        </h1>
+        <p>
+          This is the first lamp from our company. we're making a huge
+          collection of modern Lamps in all categories from home use to office
+          use.
+        </p>
+
+        <a href="">Check All Collections</a>
+      </div>
     </div>
   </body>
   <script src="js/main.js"></script>
