--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         </p>
 
         <a href="">Check All Collections</a>
+        <div class="control">
+          <p>4</p>
+          <div class="line"><span></span></div>
+          <p>5</p>
+        </div>
       </div>
     </div>
   </body>
