--- a/index.html
+++ b/index.html
@@ -8,55 +8,50 @@
     <title>Light On/Off website</title>
   </head>
   <body>
-    <div class="background">
-      <nav class="nav">
-        <a href="/"><img class="nav__logo" src="/images/logo.png" alt="" /></a>
-        <div class="collapsible">
-          <a
-            ><img class="icon icon--white nav__icon" src="/images/menu.png"
-          /></a>
-          <ul class="list nav__list collapsible__content">
-            <li class="nav__item"><a href="#">Latest</a></li>
-            <li class="nav__item"><a href="#">Modern</a></li>
-            <li class="nav__item"><a href="#">Contemporary</a></li>
-            <li class="nav__item">
-              <a href="#">Affordable</a>
-            </li>
+    <nav class="nav">
+      <a href="/"><img class="nav__logo" src="/images/logo.png" alt="" /></a>
+      <div class="collapsible">
+        <img
+          onclick="toggle_collapsible()"
+          id="collapsible"
+          class="icon icon--white nav__icon"
+          src="/images/menu.png "
+        />
+        <ul class="list nav__list" id="collapsible__content">
+          <li class="nav__item"><a href="#">Latest</a></li>
+          <li class="nav__item"><a href="#">Modern</a></li>
+          <li class="nav__item"><a href="#">Contemporary</a></li>
+          <li class="nav__item">
+            <a href="#">Affordable</a>
+          </li>
 
-            <button
-              type="button"
-              class="list_button"
-              onclick="toggleBtn()"
-              id="btn"
-            >
-              <span></span>
-            </button>
-          </ul>
-        </div>
-      </nav>
-      <div class="lamp-container">
-        <img class="lamp" src="/images/lamp.png" alt="" onclick="toggleBtn()" />
-        <img class="lamp_light" src="/images/light.png" alt="" id="light" />
+          <button
+            type="button"
+            class="list_button"
+            onclick="toggleBtn()"
+            id="btn"
+          >
+            <span></span>
+          </button>
+        </ul>
       </div>
+    </nav>
+    <div class="lamp-container" id="lampe_expanded">
+      <img class="lamp" src="/images/lamp.png" alt="" onclick="toggleBtn()" />
+      <img class="lamp_light" src="/images/light.png" alt="" id="light" />
+    </div>
 
-      <div class="Text-container">
-        <h1>
-          Latest<br />
-          in Lighting
-        </h1>
-        <p>
-          This is the first lamp from our company. we're making a huge
-          collection of modern Lamps in all categories from home use to office
-          use.
-        </p>
+    <div class="Text-container">
+      <h1>
+        Latest<br />
+        in Lighting
+      </h1>
+      <p>
+        This is the first lamp from our company. we're making a huge collection
+        of modern Lamps in all categories from home use to office use.
+      </p>
 
-        <a href="">Check All Collections</a>
-        <div class="control">
-          <p>4</p>
-          <div class="line"><span></span></div>
-          <p>5</p>
-        </div>
-      </div>
+      <a href="">Check All Collections</a>
     </div>
   </body>
   <script src="js/main.js"></script>
